--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,162 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  inline-size: 100%;
+}
+
+.header{
+  background-image: url('../images/cover-image-dark.png');
+  background-position: center;
+  background-size: cover;
+  min-inline-size: minmax(375px, 1024px);
+  block-size: 668px;
+  padding: 10px;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65px min-content 65px min-content 55px min-content 56px;
+  grid-template-areas:
+    "."
+    "nav"
+    "."
+    "title"
+    "."
+    "content"
+    ".";
+  position: relative;
+}
+
+.header__theme-menu{
+  grid-area: nav;
+  justify-items: end;
+}
+
+.header__theme-menu-list{
+  inline-size: 70px;
+  block-size: 98px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.header__theme-menu-button{
+  color: var(--accent-color);
+  background: transparent;
+  border: none;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-item {
+  inline-size: 70px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.header__theme-menu-item:last-child{
+  border: 1px solid var(--accent-color, #ff0070);
+}
+
+.header__theme-menu-item:hover,
+.header__theme-menu-item:focus-within {
+  border: 1px solid var(--accent-color-hover, #ff0070);
+  box-sizing: border-box;
+  width: 100%;
+}
+
+button:focus{
+  outline: none;
+}
+
+button:focus{
+  border-bottom: 1px solid var(--accent-color, #ff0070);
+}
+
+.header_title{
+  color: var(--header-title-color, #000028);
+  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  grid-area: title;
+}
+
+.header_content{
+  inline-size: minmax(355px, 491px);
+  color: #000028;
+  font-size: 18px;
+  background-color: var(--accent-color, #ff0070);
+  grid-area: content;
+  text-wrap: wrap;
+}
+
+.header_content-line {
+  display: block;
+}
+
+
+.decorated-corner {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+}
+
+.decorated-corner_top-right {
+  top: 10px;
+  right: 10px;
+}
+
+.decorated-corner_bottom-left {
+  bottom: 10px;
+  left: 10px;
+}
+
+.decorated-corner_top-right::before,
+.decorated-corner_bottom-left::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.decorated-corner_top-right::before{
+  border-top: 1px solid var(--accent-color, #ff0070);
+  border-right: 1px solid var(--accent-color, #ff0070);
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-corner_bottom-left::before {
+  border-bottom: 1px solid var(--accent-color, #ff0070);
+  border-left: 1px solid var(--accent-color, #ff0070);
+  width: 25px;
+  height: 25px;
+}
+
+.rec-indicator {
+  position: absolute;
+  top: 10px;
+  right: 19px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.rec-indicator__text {
+  color: var(--accent-color, #ff0070);
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.rec-indicator__dot {
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background: var(--accent-color, #ff0070);
+  box-shadow: 0 0 16px 6px var(--accent-color, #ff0070);
 }
