Header mobile with dark mode

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,4 +6,6 @@
   --header-title-color: #DB00FF;
   --accent-color: #FF0070;
   --accent-color-hover: rgba(255, 0, 112, 0.4);
+  --page-bg-color: #000028;
+  --page-text-color: #F1B2CE;
 }
