--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
   background-image: url('../images/cover-image-dark.png');
   background-position: center;
   background-size: cover;
-  min-inline-size: minmax(375px, 1024px);
+  inline-size: minmax(375px, 1024px);
   block-size: 668px;
   padding: 10px;
 
@@ -63,17 +63,19 @@ button:focus{
   outline: none;
 }
 
-
 .header_title{
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
   grid-area: title;
 }
 
-.header_content{
-  inline-size: minmax(355px, 491px);
-  font-size: 18px;
+.header_container{
   grid-area: content;
+  inline-size: 355px;
+}
+
+.header_content{
+  font-size: 18px;
   text-wrap: wrap;
 }
 
@@ -140,4 +142,87 @@ button:focus{
   width: 9px;
   height: 9px;
   border-radius: 50%;
+}
+
+@media (768px <= width < 1024px) {
+  .header {
+    grid-template-rows: 172px min-content 173px min-content 261px min-content 183px;
+    block-size: 1024px;
+    padding: 20px;
+  }
+  .header_title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    position: absolute;
+    left: -20px;
+  }
+
+  .header_container{
+    inline-size: 364px;
+    justify-self: end;
+  }
+
+  .decorated-corner_top-right {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-corner_bottom-left {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .rec-indicator {
+    top: 20px;
+    right: 29px;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    grid-template-rows: min-content 273px min-content 242px min-content 114px;
+    grid-template-areas:
+    "nav"
+    "."
+    "title"
+    "."
+    "content"
+    ".";
+    block-size: 768px;
+    padding: 20px;
+  }
+
+  .header__theme-menu{
+    justify-items: center;
+  }
+
+  .header__theme-menu-list{
+    inline-size: 230px;
+    block-size: 26px;
+    flex-direction: row;
+  }
+  .header_title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    position: absolute;
+    left: -20px;
+  }
+
+  .header_container{
+    inline-size: 491px;
+    justify-self: end;
+  }
+
+  .decorated-corner_top-right {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-corner_bottom-left {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .rec-indicator {
+    top: 20px;
+    right: 29px;
+  }
 }
