--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,25 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --fucsia: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --accent-color-hover: rgba(50, 49, 45, 0.4);
+  --bg-image: url('../images/cover-image-light.png');
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .header_title{
+  color: var(--title, #F1B2CE);
+
+}
+
+.theme-light .header__theme-menu-button{
+  color: var(--dark, #000028);
+}
+
+.theme-light .header__theme-menu-item:first-child{
+  border: 1px solid var(--dark, #000028);
+}
+
+.theme-light .rec-indicator {
+  display: none;
 }
