--- a/styles/light.css
+++ b/styles/light.css
@@ -2,6 +2,7 @@
   --fucsia: #FFC2E6;
   --accent-color: #FF8DCB;
   --accent-color-hover: rgba(50, 49, 45, 0.4);
+  --accent-color-focus: #353430;
   --bg-image: url('../images/cover-image-light.png');
   --bg-color: #FFF1F7;
   --title: #353430;
