--- a/styles/style.css
+++ b/styles/style.css
@@ -1,576 +1,478 @@
 .page {
+  font-family: var(--font-family, sans-serif);
+  background-image: var(--page-bg-color, none);
   background-color: var(--bg-color, #000028);
-  background-image: var(--bg-image, url('../images/cover-image-dark.png'));
-  background-position: bottom;
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   background-attachment: fixed;
+  object-fit: cover;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
 }
 
-.main{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.header-decorated {
+  position: absolute;
+  right: 30px;
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, 18px);
+  margin-block-start: 10px;
+  color: var(--accent-color, #ff0070);
+  z-index: -1;
 }
 
-.header{
-  block-size: 100vh;
-  min-block-size: 668px;
-  padding: 10px;
-
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr min-content 1fr;
-  grid-template-areas:
-    "nav"
-    "title"
-    "content";
-  position: relative;
-}
-
-.header__theme-menu{
-  grid-area: nav;
-  justify-items: end;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.header__theme-menu-list{
-  inline-size: 70px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.header__theme-menu-item {
-  inline-size: 70px;
-  block-size: 26px;
-  text-align: center;
-  box-sizing: border-box;
-}
-
-.header__theme-menu-button{
-  background: transparent;
-  border: none;
-  text-transform: lowercase;
-  color: var(--accent-color);
-}
-
-.header__theme-menu-item:hover {
-  box-sizing: border-box;
-  border: 1px solid var(--accent-color-hover, #ff0070);
-}
-
-button:focus{
-  outline: none;
-}
-
-.header__theme-menu-item:focus-within{
-  border-bottom: 1px solid var(--accent-color-focus, #ff0070);
-}
-
-
-
-.header_title{
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: 82.5%;
-  grid-area: title;
-  color: var(--fucsia, #DB00FF);
-  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
-  justify-self: center;
-  align-self: center;
-
-}
-
-.title-decor {
+.header-decorated::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
   background-color: var(--accent-color, #ff0070);
-  color: var(--dark, #000028);
-  font-size: 18px;
+  top: 8px;
+  left: 40px;
+  box-shadow: 0px 0px 4px 2px;
+  block-size: 9px;
+  inline-size: 9px;
 }
 
-.header_container{
-  grid-area: content;
-  inline-size: 355px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.header,
+.footer {
+  height: 100vh;
+  min-height: 668px;
 }
 
-.header_content-line {
-  display: block;
+.header {
+  margin-block-end: 40px;
 }
 
-/* Декоративные углы */
 .decorated-zone {
   position: relative;
 }
 
-.decorated-zone::before,
-.decorated-zone::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  pointer-events: none;
-  box-sizing: border-box;
-}
-
 .decorated-zone::before {
-  top: 10px;
-  right: 10px;
-  border-top: 1px solid var(--decor-corner, #ff0070);
-  border-right: 1px solid var(--decor-corner, #ff0070);
+  content: "";
+  position: absolute;
+  block-size: 25px;
+  inline-size: 25px;
+  top: 0px;
+  right: 0px;
+  border-top: 1px solid var(--accent-color, #ff0070);
+  border-right: 1px solid var(--accent-color, #ff0070);
+  margin-block-start: 10px;
 }
 
 .decorated-zone::after {
-  bottom: 10px;
-  left: 10px;
-  border-bottom: 1px solid var(--decor-corner, #ff0070);
-  border-left: 1px solid var(--decor-corner, #ff0070);
+  content: "";
+  position: absolute;
+  block-size: 25px;
+  inline-size: 25px;
+  bottom: 0px;
+  left: 0px;
+  border-bottom: 1px solid var(--accent-color, #ff0070);
+  border-left: 1px solid var(--accent-color, #ff0070);
+  margin-block-end: 10px;
 }
 
-/* Декоративная надпись REC */
+.header__theme-menu {
+  padding-block-start: 75px;
+}
 
-.rec-indicator {
-  position: absolute;
-  top: 10px;
-  right: 19px;
+.header__theme-menu-list {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: end;
   gap: 10px;
-  z-index: 2;
+}
+
+.header__theme-menu-button {
+  font-family: inherit;
+  color: var(--accent-color, #ff0070);
+  font-size: var(--font-size, 18px);
+  border: none;
+  background-color: transparent;
+  padding-inline: 13px;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid currentColor;
   pointer-events: none;
 }
 
-.rec-indicator__text {
-  font-size: 18px;
-  line-height: 25px;
-  font-weight: normal;
-  color: var(--accent-color, #ff0070);
+.header__theme-menu-button:hover {
+  border: 1px solid var(--border-button-color);
 }
 
-/* Декоративный круг через псевдоэлемент */
-.rec-indicator::after {
-  content: "";
-  display: inline-block;
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background: var(--accent-color, #ff0070);
-  box-shadow: 0 0 10px 3px var(--accent-color, #ff0070);
-}
-
-/* Блок main */
-
-.main {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 40px 10px 10px 10px;
-  max-width: 100vw;
-  box-sizing: border-box;
-}
-
-.main_grid-container{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(auto-fit, min-content);
-  gap: 44px;
-}
-
-.content{
-  display: grid;
-  grid-template-columns: max-content;
-  gap: 20px;
-}
-
-.section_title{
-  color: var(--section-title, #ff0070);
-  inline-size: 355px;
-}
-
-
-.post_content{
-  margin-top: 10px;
-  color: var(--title, #F1B2CE);
-  font-weight: normal;
-}
-
-.url-in-text{
-  text-decoration: none;
-  text-shadow: 2px 1px var(--accent-color, #ff0070);
-}
-
-.url-in-text:hover{
-  border-bottom: 1px solid var(--title, #F1B2CE);
-}
-
-.url-in-text:focus-visible {
-  border: 1px solid var(--title, #F1B2CE);
-  padding: 1px;
+.header__theme-menu-button:focus {
+  border: none;
   outline: none;
 }
 
-.container,
-.content .title-decor,
-.content_photos .title-decor{
-  max-width: 355px;
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid currentColor;
 }
 
-.uniq{
-  font-weight: normal;
+.header__title {
+  --font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--font-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
+  color: var(--header-title, #db00ff);
+  text-shadow: 4px 4px 0 var(--accent-shadow-color, #ff0070);
+  font-style: normal;
+  line-height: 82.5%;
+  margin-block-start: 70px;
 }
 
-.content_photos{
-  display: grid;
-  grid-template-columns: min-content;
-  gap: 10px;
-}
-
-.content_photos:has(.title-decor){
-  margin-top: 2px;
-}
-
-.pictures{
+.header__content {
   inline-size: 355px;
-  object-fit: cover;
-  object-position: center;
+  margin-block-start: 54px;
+  justify-self: end;
 }
 
-.title-decor--spaced{
-    margin-bottom: 20px;
+.header__text {
+  display: inline-block;
+  color: var(--accent-bg-text-color, #000028);
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, 18px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px;
+}
+
+.title-decor {
+  background-color: var(--accent-bg-color, #ff0070);
+}
+
+.section-focus {
+  display: flex;
+  flex-direction: column;
+}
+
+.content__title {
+  font-size: var(--font-size, 18px);
+  color: var(--accent-color, #ff0070);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px;
+}
+
+.content__subject {
+  margin-block-start: 20px;
+  color: var(--accent-bg-text-color, #000028);
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, 18px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px;
+}
+
+.content__subject-weight {
+  font-weight: 400;
+}
+
+.content__text {
+  color: var(--text-color, #f1b2ce);
+  font-family: var(--font-family, sans-serif);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.4px;
+  margin-block-start: 10px;
+}
+
+.content__text-list {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-text-color, #ff0070);
+}
+
+.content__text-list:hover {
+  border-bottom: 1px solid var(--link-color, #f1b2ce);
+}
+
+.content__text-list:focus {
+  border: none;
+  outline: none;
+}
+
+.content__text-list:focus-visible {
+  border: 1px solid var(--link-color, #f1b2ce);
+}
+
+.cover-second {
+  margin-block-start: 50px;
+}
+
+.section-concentration {
+  margin-block-start: 50px;
+}
+
+.section-concentration-better {
+  margin-block-start: 50px;
+}
+
+.picture-title {
+  margin-block-start: 50px;
+  color: var(--accent-bg-text-color, #000028);
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, 18px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px; /* 130% */
+  margin-block-end: 0px;
+}
+
+.section-image {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-block-end: 40px;
+}
+
+.section-image__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.footer-title {
+  --font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--header-title, #db00ff);
+  text-shadow: 2px 2px 0px var(--shadow-title, #ff0070);
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%; /* 95.7px */
+}
+
+.footer {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (width >= 768px) {
+  .header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr min-content 1fr;
+    min-block-size: 1024px;
   }
 
+  .header__theme-menu {
+    grid-column: 2;
+  }
 
-/* Блок footer */
-
-.footer{
-  margin-top: 40px;
-  block-size: 100vh;
-  min-block-size: 668px;
-  position: relative;
-  padding: 0 10px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  justify-items: center;
-  align-items: center;
-}
-
-.focus_footer{
-  display: block;
-  text-align: center;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: 82.5%;
-  color: var(--fucsia, #DB00FF);
-  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
-  margin-bottom: 20px;
-}
-
-.footer.decorated-zone::before {
-  top: 0px;
-}
-
-.footer.decorated-zone::after {
-  bottom: 20px;
-}
-
-@media (768px <= width < 1024px) {
-
-  /* .page{
-    max-width: 768px;
-  } */
-
-  .header {
-    block-size: 1024px;
+  .header-decorated {
+    margin-block-start: 20px;
+    margin-inline-end: 5px;
   }
 
   .decorated-zone::before {
-  top: 20px;
-  right: 20px;
-}
+    margin-block-start: 20px;
+    margin-inline-end: 10px;
+  }
 
   .decorated-zone::after {
-    bottom: 20px;
-    left: 20px;
+    margin-block-end: 20px;
+    margin-inline-start: 10px;
   }
 
-  .header__theme-menu{
-    margin-right: 10px;
-    margin-bottom: 40px;
+  .header__theme-menu-list {
+    margin-block-start: 115px;
+    margin-inline-end: 10px;
   }
 
-  .header_title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    position: absolute;
-    left: -10px;
+  .header__title {
+    grid-column: span 2;
+    --font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-size: var(
+      --font-size,
+      clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem)
+    );
+    margin-left: -10px;
+    margin-block-start: 0px;
   }
 
-  .header_container{
+  .header__content {
+    grid-column: 2;
     inline-size: 364px;
-    justify-self: end;
-    margin-right: 10px;
-    margin-top: 40px;
+    margin-block: auto 185px;
+    margin-inline-end: 10px;
   }
 
-  .rec-indicator {
-    top: 20px;
-    right: 29px;
+  .section-focus {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    margin-block-start: 60px;
   }
 
-  .main{
-    padding: 20px;
+  .content__title {
+    margin-inline-start: 10px;
+    grid-row: span 2;
   }
 
-  .content{
-    margin-top: 40px;
-    gap: 19px;
-  }
-  .main_grid-container{
-    gap: 38px;
-  }
-
-  .content,
-  .main_grid-container{
-    inline-size: 728px;
+  .content__subject {
+    margin-block-start: 10px;
+    margin-inline-end: 10px;
+    margin-inline-start: 10px;
+    align-self: start;
   }
 
-  .section_title{
-    inline-size: 236px;
+  .content__subject-indent {
+    margin-block-start: 0px;
   }
 
-  .container,
-  .content .title-decor,
-  .content_photos .title-decor{
-    max-width: 728px;
-    grid-column-start: 2;
+  .content__text {
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+    margin-block-end: 20px;
   }
 
-  .customize-for-medium{
-    grid-column: 1 / 2;
-    max-width: 728px;
+  .section-concentration__title {
+    width: 236px;
+    margin-block-end: 20px;
+    margin-block-start: 50px;
   }
 
-  .content.big-padding{
-    margin-bottom: 41px;
+  .section-concentration-better {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: minmax(20px 1fr);
+    margin-block-start: 80px;
+    gap: 10px;
   }
 
-  .content_photos{
-    inline-size: 768px;
-    grid-template-columns: repeat(3, 230px);
-    grid-template-rows: 23px repeat(3, min-content);
+  .section-concentration-better-list {
+    grid-column: 2;
+  }
+
+  .picture-title {
+    grid-column: span 3;
+    margin-block-start: 60px;
+    inline-size: 100%;
+  }
+
+  .section-image {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(3, minmax(229px, 1fr));
+    padding-inline: 10px;
+    overflow: auto;
     gap: 20px;
+    margin-block-end: 60px;
   }
 
-  .content_photos .title-decor{
-    inline-size: 768px;
-    grid-column-start: 1;   
-  }
-  
-  .content_photos .pictures:nth-child(2){
-    inline-size: 479px ;
-    block-size: 192px;
-    grid-column: 1 / 2;
-    grid-row: 2 / 2;
+  .section-image__sunset {
+    grid-column: span 2;
   }
 
-  .content_photos .pictures:nth-child(3){
-    inline-size: 229px ;
-    
-    block-size: 442px;
-    grid-column: 3 / 3;
-    grid-row: 2 / 4;
+  .section-image__ice-cream {
+    grid-column: 3;
+    grid-row: span 2;
   }
 
-  .content_photos .pictures:nth-child(4){
-    inline-size: 229px ;
-    block-size: 568px;
-    grid-column: 1 / 1;
-    grid-row: 3 / 4;
+  .section-image__tape {
+    grid-row: span 2;
   }
 
-  .content_photos .pictures:nth-child(5){
-    inline-size: 230px;
-    block-size: 230px;
-    grid-column: 2 / 3;
-    grid-row: 3 / 3;
+  .section-image__street {
+    grid-column: span 2;
   }
 
-  .content_photos .pictures:nth-child(6){
-    inline-size: 479px;
-    block-size: 318px;
-    grid-column: 2 / 3;
-    grid-row: 3 / 3;
-    align-self: flex-end;
+  .footer {
+    min-height: 1024px;
   }
 
-  .footer{
-    block-size: 1024px;
-    margin-top: 40px;
-  }
-  .footer.decorated-zone::after {
-    bottom: 40px;
-  }
-
-  .focus_footer{
-    margin-bottom: 40px;
+  .footer-title {
+    --font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-size: var(
+      --font-size,
+      clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem)
+    );
   }
 }
 
 @media (width >= 1024px) {
-
-  /* .page{
-    max-width: 1024px;
-  } */
-
-  .main{
-    padding-top: 60px;
-    padding-left: 20px;
-  }
-
-  .main_grid-container{
-    gap: 78px;
+  .page {
+    margin-block-start: 20px;
   }
 
   .header {
-    block-size: 768px;
+    min-block-size: 768px;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    justify-content: center;
+    margin: 0px;
+  }
+
+  .header__theme-menu {
+    grid-column: span 2;
+    align-self: flex-start;
+    margin-block: 0;
+    padding-block: 0;
+  }
+
+  .header-decorated {
+    margin-block: 0;
   }
 
   .decorated-zone::before {
-    top: 20px;
-    right: 20px;
+    margin-block-start: 0px;
   }
 
   .decorated-zone::after {
-    bottom: 20px;
-    left: 20px;
+    margin-block-end: 40px;
   }
 
-  .rec-indicator {
-    top: 20px;
-    right:29px;
+  .header__title {
+    margin-block-start: 0px;
+    margin-block-end: 40px;
   }
 
-  .header__theme-menu{
-    justify-content: center;
-    align-items: start;
-    margin-top: 10px;
+  .header__content {
+    min-inline-size: 491px;
+    margin-block-end: 155px;
   }
 
-  .header__theme-menu-list{
-    inline-size: 230px;
-    block-size: 26px;
-    flex-direction: row;
+  .section-focus {
+    margin-block-start: 40px;
+    gap: 0px;
   }
 
-  .header_container{
-    inline-size: 491px;
-    justify-self: end;
-    margin-right: 10px;
-    margin-top: 53px;
-  }
-
-  .header_title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    position: absolute;
-    left: -10px;
-  }
-
-  .content,
-  .main_grid-container{
-    inline-size: 1024px;
-  }
-
-  .section_title{
-    inline-size: 315px;
-  }
-
-  .customize-for-large{
-    inline-size: 649px;
-    grid-column-start: 2;
-  }
-
-  .container,
-  .content .title-decor,
-  .content_photos .title-decor{
-    max-width: 984px;
-  }
-
-  .big-content{
-    inline-size: 984px;
+  .section-concentration {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: min-content;
-    gap: 20px;
+    grid-template-columns: 1fr;
+    margin-block: 0;
   }
 
-  .big-content .section_title{
-    grid-column: 1 / 4;
-    grid-row: 1 / 1;
+  .section-concentration__title {
+    min-inline-size: 315px;
+    margin-block-end: 10px;
+    margin-block-start: 60px;
   }
 
-  .content_photos{
-    inline-size: 1024px;
-    grid-template-columns: repeat(3, 315px);
-    grid-template-rows: 23px repeat(3, min-content);
-    gap: 20px;
+  .section-concentration-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
-  .content_photos .title-decor{
-    inline-size: 1024px;
-    grid-column-start: 1;
-  }
-  
-  .content_photos .pictures:nth-child(2){
-    inline-size: 650px ;
-    block-size: 260px;
-    grid-column: 1 / 2;
-    grid-row: 2 / 2;
+  .section-concentration-better {
+    margin-block-start: 60px;
+    gap: 0px;
   }
 
-  .content_photos .pictures:nth-child(3){
-    inline-size: 314px;
-    block-size: 595px;
-    grid-column: 3 / 3;
-    grid-row: 2 / 4;
+  .section-concentration-better-list {
+    margin-block-start: 10px;
   }
 
-  .content_photos .pictures:nth-child(4){
-    inline-size: 315px ;
-    block-size: 768px;
-    grid-column: 1 / 1;
-    grid-row: 3 / 4;
+  .section-image {
+    margin-block-end: 80px;
   }
 
-  .content_photos .pictures:nth-child(5){
-    inline-size: 315px;
-    block-size: 315px;
-    grid-column: 2 / 3;
-    grid-row: 3 / 3;
-  }
-
-  .content_photos .pictures:nth-child(6){
-    inline-size: 649px;
-    block-size: 433px;
-    grid-column: 2 / 3;
-    grid-row: 3 / 3;
-    align-self: flex-end;
-  }
-
-  .footer{
-    block-size: 768px;
-  }
-
-  .focus_footer{
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
-  .footer.decorated-zone::before {
-    top: 5px;
-  }
-
-  .footer.decorated-zone::after {
-    bottom: 35px;
+  .footer {
+    padding-block-end: 35px;
+    min-height: 768px;
   }
 }
